--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -5,6 +5,6 @@
 \begin{acronym}[YTMMM]
 \setlength{\itemsep}{-\parsep}
 
-\acro{AGPL}{Affero GNU General Public License}
+\acro{SPARQL}{SPARQL Protocol And RDF Query Language}
 
 \end{acronym}
