--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -1,3 +1,7 @@
+%
+% Why? Papers
+%
+
 @techreport{unwin:WhyDataVisualization,
   author      = {Unwin, Antony},
   institution = {Harvard Data Science Review},
@@ -5,12 +9,20 @@
   year        = {2020}
 }
 
+%
+% Visualization Survey
+%
+
 @techreport{chen:SurveyGraphVisualization,
   author      = {Chen, Yi and Guan, Zeli and Zhang, Rong and Du, Xiaomin and Wang, Yunhai},
   institution = {The Visualization Society of Japan},
   title       = {A survey on visualization approaches for exploring association relationships in graph data},
   year        = {2019}
 }
+
+%
+% Wikipedia
+%
 
 @online{wiki:DataVisualization,
   author  = {{Wikipedia}},
@@ -26,34 +38,9 @@
   urldate = {2024-01-18}
 }
 
-@book{baumgartner:2002,
-	title = {E-Learning Praxishandbuch : Auswahl von Lernplattformen; Marktübersicht, Funktionen, Fachbegriffe},
-	author = {Baumgartner, Peter and Häfele, Hartmut and Maier-Häfele, Kornelia},
-	address = {Innsbruck},
-	publisher = {StudienVerl.},
-	year = {2002},
-	isbn = {3-7065-1771-X}
-}
-
-@TechReport{dreyfus:1980,
-	author = {Stuard E. Dreyfus and Hubert L. Dreyfus},
-	title = {A Five-Stage Model Of The Mental Activities Involved In Directed Skill Acquisition},
-	institution = {University of California, Berkley},
-	year = {1980},
-	url = {http://www.dtic.mil/cgi-bin/GetTRDoc?AD=ADA084551&Location=U2&doc=GetTRDoc.pdf},
-}
-
-@Online{fsf:2007,
-	author = {{Free Software Foundation}},
-	title = {{GNU AFFERO GENERAL PUBLIC LICENSE}},
-	url = {http://www.gnu.org/licenses/agpl-3.0.de.html},
-	year = {2007}
-}
-
-@Unpublished{mustermann:2012,
-	author = {Max Mustermann},
-	title = {tolles Musterthema},
-	year = {2012},
-	address = {Musterstadt},
-	note = {Studienarbeit}
+@online{wiki:KnowledgeGraph,
+  author  = {{Wikipedia}},
+  title   = {Knowledge graph},
+  url     = {https://en.wikipedia.org/wiki/Knowledge_graph},
+  urldate = {2024-01-18}
 }
