--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -44,3 +44,22 @@
   url     = {https://en.wikipedia.org/wiki/Knowledge_graph},
   urldate = {2024-01-18}
 }
+
+%
+% Node-Link
+%
+
+@online{nodelink:Basics,
+  author  = {{The Data Visualisation Catalogue}},
+  title   = {Network Diagram},
+  url     = {https://datavizcatalogue.com/methods/network_diagram.html},
+  urldate = {2024-02-10}
+}
+
+@techreport{nodelink:DynamicGraph,
+  author      = {Burch, M. and ten Brinke, K.B. and Castella, A. and others},
+  institution = {Visual Computing for Industry,
+                 Biomedicine, and Art},
+  title       = {Dynamic graph exploration by interactively linked node-link diagrams and matrix visualizations},
+  year        = {2021}
+}
