--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -63,3 +63,14 @@
   title       = {Dynamic graph exploration by interactively linked node-link diagrams and matrix visualizations},
   year        = {2021}
 }
+
+%
+% Knowledge Graphs
+%
+
+@online{knowledgeGraph:whatIs,
+  author  = {{ontotext}},
+  title   = {What is a Knowledge Graph?},
+  url     = {https://www.ontotext.com/knowledgehub/fundamentals/what-is-a-knowledge-graph/},
+  urldate = {2024-02-20}
+}
