--- a/tex/bibliographie.bib
+++ b/tex/bibliographie.bib
@@ -74,3 +74,14 @@
   url     = {https://www.ontotext.com/knowledgehub/fundamentals/what-is-a-knowledge-graph/},
   urldate = {2024-02-20}
 }
+
+%
+% Clustering
+%
+
+@book{clustering:AlgosForClust,
+  author         = {Jain, Anil K. and Dubes, Richard C.},
+  publisher      = {Prentice Hall},
+  title          = {Algorithms for Clustering Data},
+  year           = {1988}
+}
