--- a/tex/settings/document.tex
+++ b/tex/settings/document.tex
@@ -12,7 +12,7 @@
 
 \newcommand{\multipleAuthors}{false}
 \newcommand{\documentAuthor}{Jonas Wiedenmann}
-\newcommand{\documentTitle}{Titel der Arbeit}
+\newcommand{\documentTitle}{Visualisierung von großen Datasets aus Graph-Datenbanken}
 \newcommand{\documentPeriod}{12 Wochen}
 
 \newcommand{\matriculationNumber}{1234510}
