--- a/tex/bibliographie.bib
+++ b/tex/bibliographie.bib
@@ -20,6 +20,16 @@
   year        = {2019}
 }
 
+@techreport{kgVisualization:Nararatwong,
+  author    = {Nararatwong, Rungsiman and Kertkeidkachorn, Natthawut and Ichise, Ryutaro},
+  booktitle = {2020 IEEE Third International Conference on Artificial Intelligence and Knowledge Engineering (AIKE)},
+  title     = {Knowledge Graph Visualization: Challenges, Framework, and Implementation},
+  year      = {2020},
+  pages     = {174-178},
+  doi       = {10.1109/AIKE48582.2020.00034}
+}
+
+
 %
 % Wikipedia
 %
@@ -65,8 +75,29 @@
 }
 
 %
-% Knowledge Graphs
+% Graphs and Knowledge Graphs
 %
+
+@book{graphIntroduction:Wilson,
+  author    = {Wilson, Robin J.},
+  publisher = {Longman},
+  edition   = {4},
+  title     = {Introduction to Graph Theory},
+  year      = {1996},
+  isbn      = {0-582-24993-7}
+}
+
+@article{knowledgeGraphIntroduction:Chaudhri,
+  title   = {Knowledge Graphs: Introduction, History and, Perspectives },
+  volume  = {43},
+  url     = {https://ojs.aaai.org/aimagazine/index.php/aimagazine/article/view/19119},
+  doi     = {10.1002/aaai.12033},
+  number  = {1},
+  journal = {AI Magazine},
+  author  = {Chaudhri, Vinay and Baru, Chaitanya and Chittar, Naren and Dong , Xin and Genesereth, Michael and Hendler, James and Kalyanpur, Aditya and Lenat, Douglas and Sequeda, Juan and Vrandečić, Denny and Wang, Kuansan},
+  year    = {2022},
+  pages   = {17-29}
+}
 
 @online{knowledgeGraph:whatIs,
   author  = {{ontotext}},
@@ -80,8 +111,8 @@
 %
 
 @book{clustering:AlgosForClust,
-  author         = {Jain, Anil K. and Dubes, Richard C.},
-  publisher      = {Prentice Hall},
-  title          = {Algorithms for Clustering Data},
-  year           = {1988}
+  author    = {Jain, Anil K. and Dubes, Richard C.},
+  publisher = {Prentice Hall},
+  title     = {Algorithms for Clustering Data},
+  year      = {1988}
 }
