--- a/tex/settings/document.tex
+++ b/tex/settings/document.tex
@@ -13,13 +13,13 @@
 \newcommand{\multipleAuthors}{false}
 \newcommand{\documentAuthor}{Jonas Wiedenmann}
 \newcommand{\documentTitle}{Visualisierung von großen Datasets aus Graph-Datenbanken}
-\newcommand{\documentPeriod}{12 Wochen}
+\newcommand{\documentPeriod}{22 Wochen}
 
-\newcommand{\matriculationNumber}{1234510}
+\newcommand{\matriculationNumber}{7419052}
 
 \newcommand{\locationUniversity}{Heidenheim}
 \newcommand{\department}{Informatik}
-\newcommand{\course}{TINF2014MI}
+\newcommand{\course}{INF2021}
 
 \newcommand{\degree}{Bachelor of Science}
 % INF2014 - INF2016 (MI):       Bachelor of Science
@@ -31,13 +31,13 @@
 % Whether to show the lecture on cover
 \newcommand{\showLecture}{false}
 
-\newcommand{\releaseDate}{September 20XX}
+\newcommand{\releaseDate}{September 2024}
 \newcommand{\releaseLocation}{Abgabeort}
 
-\newcommand{\companyName}{Firma GmbH}
-\newcommand{\companyLocation}{Firmenort}
+\newcommand{\companyName}{EXTRA Computer GmbH}
+\newcommand{\companyLocation}{Giengen an der Brenz}
 
-\newcommand{\tutor}{Dipl.-Ing.~(FH) Peter Pan}
+\newcommand{\tutor}{Franziska Schütz}
 \newcommand{\evaluator}{Prof. Dr.\ Rolf Assfalg}
 
 \newcommand{\linkColor}{00007A}
