--- a/tex/bibliographie.bib
+++ b/tex/bibliographie.bib
@@ -29,6 +29,22 @@
   doi       = {10.1109/AIKE48582.2020.00034}
 }
 
+%
+% Visualization Tools
+%
+
+@article{gephi:Bastian,
+  title        = {Gephi: An Open Source Software for Exploring and Manipulating Networks},
+  volume       = {3},
+  url          = {https://ojs.aaai.org/index.php/ICWSM/article/view/13937},
+  doi          = {10.1609/icwsm.v3i1.13937},
+  number       = {1},
+  journal      = {Proceedings of the International AAAI Conference on Web and Social Media},
+  author       = {Bastian, Mathieu and Heymann, Sebastien and Jacomy, Mathieu},
+  year         = {2009},
+  month        = {3},
+  pages        = {361-362}
+}
 
 %
 % Wikipedia
@@ -53,6 +69,20 @@
   title   = {Knowledge graph},
   url     = {https://en.wikipedia.org/wiki/Knowledge_graph},
   urldate = {2024-01-18}
+}
+
+@online{forceGraph:yWorks,
+  author  = {{yWorks}},
+  title   = {Force-Directed Graph Layout},
+  url     = {https://www.yworks.com/pages/force-directed-graph-layout},
+  urldate = {2024-08-19}
+}
+
+@online{clusteringGraph:yWorks,
+  author  = {{yWorks}},
+  title   = {Clustering Graphs and NetworksClustering Graphs and Networks},
+  url     = {https://www.yworks.com/pages/clustering-graphs-and-networks},
+  urldate = {2024-08-19}
 }
 
 %
