--- a/tex/bibliographie.bib
+++ b/tex/bibliographie.bib
@@ -34,16 +34,32 @@
 %
 
 @article{gephi:Bastian,
-  title        = {Gephi: An Open Source Software for Exploring and Manipulating Networks},
-  volume       = {3},
-  url          = {https://ojs.aaai.org/index.php/ICWSM/article/view/13937},
-  doi          = {10.1609/icwsm.v3i1.13937},
-  number       = {1},
-  journal      = {Proceedings of the International AAAI Conference on Web and Social Media},
-  author       = {Bastian, Mathieu and Heymann, Sebastien and Jacomy, Mathieu},
-  year         = {2009},
-  month        = {3},
-  pages        = {361-362}
+  title   = {Gephi: An Open Source Software for Exploring and Manipulating Networks},
+  volume  = {3},
+  url     = {https://ojs.aaai.org/index.php/ICWSM/article/view/13937},
+  doi     = {10.1609/icwsm.v3i1.13937},
+  number  = {1},
+  journal = {Proceedings of the International AAAI Conference on Web and Social Media},
+  author  = {Bastian, Mathieu and Heymann, Sebastien and Jacomy, Mathieu},
+  year    = {2009},
+  month   = {3},
+  pages   = {361-362}
+}
+
+@techreport{cytoscape:Shannon,
+  title       = {Cytoscape: A Software Environment for Integrated
+                 Models of Biomolecular Interaction Networks},
+  url         = {http://www.genome.org/cgi/doi/10.1101/gr.1239303},
+  institution = {Cold Spring Harbor Laboratory },
+  author      = {Paul Shannon and Andrew Markiel and Owen Ozier and Nitin S. Baliga and Jonathan T. Wang and Daniel Ramage and Nada Amin and Benno Schwikowski and Trey Ideker},
+  year        = {2003}
+}
+
+@online{cytoscapeLayout:Cytoscape,
+  author  = {{The Cytoscape Consortium}},
+  title   = {Navigation and Layout},
+  url     = {https://manual.cytoscape.org/en/stable/Navigation_and_Layout.html},
+  urldate = {2024-08-19}
 }
 
 %
