finished Vereinfachungs- und Interaktionstechniken

--- a/tex/bibliographie.bib
+++ b/tex/bibliographie.bib
@@ -63,6 +63,63 @@
 }
 
 %
+% Visualization Techniques
+%
+
+@book{clustering:AlgosForClust,
+  author    = {Jain, Anil K. and Dubes, Richard C.},
+  publisher = {Prentice Hall},
+  title     = {Algorithms for Clustering Data},
+  year      = {1988}
+}
+
+@inproceedings{louvain:Que,
+  author    = {Que, Xinyu and Checconi, Fabio and Petrini, Fabrizio and Gunnels, John A.},
+  booktitle = {2015 IEEE International Parallel and Distributed Processing Symposium},
+  title     = {Scalable Community Detection with the Louvain Algorithm},
+  year      = {2015},
+  pages     = {28-37},
+  doi       = {10.1109/IPDPS.2015.59}
+}
+
+@article{kmeans:Xu,
+  author  = {Xu, Rui and Wunsch, Donald},
+  year    = {2005},
+  month   = {06},
+  pages   = {645 - 678},
+  title   = {Survey of Clustering Algorithms},
+  volume  = {16},
+  journal = {Neural Networks, IEEE Transactions on},
+  doi     = {10.1109/TNN.2005.845141}
+}
+
+@article{edgeBundling:Holten,
+  title     = {Force-directed edge bundling for graph visualization},
+  author    = {D.H.R. Holten and {Wijk, van}, J.J.},
+  year      = {2009},
+  doi       = {10.1111/j.1467-8659.2009.01450.x},
+  volume    = {28},
+  journal   = {Computer Graphics Forum},
+  issn      = {0167-7055},
+  publisher = {Wiley-Blackwell},
+  number    = {3}
+}
+
+@inproceedings{fisheye:Sarkar,
+  author    = {Sarkar, Manojit and Brown, Marc H.},
+  title     = {Graphical fisheye views of graphs},
+  year      = {1992},
+  isbn      = {0897915135},
+  publisher = {Association for Computing Machinery},
+  url       = {https://doi.org/10.1145/142750.142763},
+  doi       = {10.1145/142750.142763},
+  booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  pages     = {83-91},
+  numpages  = {9},
+}
+
+
+%
 % Wikipedia
 %
 
@@ -150,15 +207,4 @@
   title   = {What is a Knowledge Graph?},
   url     = {https://www.ontotext.com/knowledgehub/fundamentals/what-is-a-knowledge-graph/},
   urldate = {2024-02-20}
-}
-
-%
-% Clustering
-%
-
-@book{clustering:AlgosForClust,
-  author    = {Jain, Anil K. and Dubes, Richard C.},
-  publisher = {Prentice Hall},
-  title     = {Algorithms for Clustering Data},
-  year      = {1988}
 }
