--- a/tex/bibliographie.bib
+++ b/tex/bibliographie.bib
@@ -208,3 +208,21 @@
   url     = {https://www.ontotext.com/knowledgehub/fundamentals/what-is-a-knowledge-graph/},
   urldate = {2024-02-20}
 }
+
+%
+% JavaScript Frameworks
+%
+
+@online{d3js:Bostock,
+  author  = {Bostock, Mike},
+  title   = {GitHub - d3},
+  url     = {https://github.com/d3/d3},
+  urldate = {2024-08-26}
+}
+
+@online{sigmajs:Jacomy,
+  author  = {Jacomy, Alexis and Plique, Guillaume and Simard, Benoît },
+  title   = {GitHub - sigma.js},
+  url     = {https://github.com/jacomyal/sigma.js},
+  urldate = {2024-08-26}
+}
