--- a/tex/content/acronyms.tex
+++ b/tex/content/acronyms.tex
@@ -5,6 +5,11 @@
 \begin{acronym}[YTMMM]
 \setlength{\itemsep}{-\parsep}
 
+\acro{API}{Application Programming Interface}
 \acro{SPARQL}{SPARQL Protocol And RDF Query Language}
+\acro{RDF}{Resource Description Framework}
+\acro{SPA}{Single Page Application}
+\acro{DOM}{Document Object Model}
+\acro{JSON}{JavaScript Object Notation}
 
 \end{acronym}
