--- a/tex/content/acronyms.tex
+++ b/tex/content/acronyms.tex
@@ -3,13 +3,13 @@
 \addchap{\acronymsPhrase}
 
 \begin{acronym}[YTMMM]
-\setlength{\itemsep}{-\parsep}
+    \setlength{\itemsep}{8pt}
 
-\acro{API}{Application Programming Interface}
-\acro{SPARQL}{SPARQL Protocol And RDF Query Language}
-\acro{RDF}{Resource Description Framework}
-\acro{SPA}{Single Page Application}
-\acro{DOM}{Document Object Model}
-\acro{JSON}{JavaScript Object Notation}
+    \acro{API}{Application Programming Interface}
+    \acro{SPARQL}{SPARQL Protocol And RDF Query Language}
+    \acro{RDF}{Resource Description Framework}
+    \acro{SPA}{Single Page Application}
+    \acro{DOM}{Document Object Model}
+    \acro{JSON}{JavaScript Object Notation}
 
 \end{acronym}
