--- a/tex/bibliographie.bib
+++ b/tex/bibliographie.bib
@@ -226,3 +226,14 @@
   url     = {https://github.com/jacomyal/sigma.js},
   urldate = {2024-08-26}
 }
+
+%
+% Technologies
+%
+
+@online{rdf:W3C,
+  author  = {{w3.org}},
+  title   = {RDF 1.1 Concepts and Abstract Syntax},
+  url     = {https://www.w3.org/TR/rdf11-concepts/},
+  urldate = {2024-09-06}
+}
