--- a/tex/bibliographie.bib
+++ b/tex/bibliographie.bib
@@ -118,6 +118,20 @@
   numpages  = {9},
 }
 
+@online{forceGraph:yWorks,
+  author  = {{yWorks}},
+  title   = {Force-Directed Graph Layout},
+  url     = {https://www.yworks.com/pages/force-directed-graph-layout},
+  urldate = {2024-08-19}
+}
+
+@online{clusteringGraph:yWorks,
+  author  = {{yWorks}},
+  title   = {Clustering Graphs and NetworksClustering Graphs and Networks},
+  url     = {https://www.yworks.com/pages/clustering-graphs-and-networks},
+  urldate = {2024-08-19}
+}
+
 %
 % Node-Link
 %
@@ -135,6 +149,17 @@
                  Biomedicine, and Art},
   title       = {Dynamic graph exploration by interactively linked node-link diagrams and matrix visualizations},
   year        = {2021}
+}
+
+%
+% Adjacency Matrix
+%
+
+@online{adjacencymatrix:Sauras,
+  author  = {Sauras-Altuzarra, Lorenzo and Weisstein, Eric W.},
+  title   = {Adjacency Matrix},
+  url     = {https://mathworld.wolfram.com/AdjacencyMatrix.html},
+  urldate = {2024-07-10}
 }
 
 %
