--- a/tex/bibliographie.bib
+++ b/tex/bibliographie.bib
@@ -115,7 +115,7 @@
   doi       = {10.1145/142750.142763},
   booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
   pages     = {83-91},
-  numpages  = {9},
+  numpages  = {9}
 }
 
 @online{forceGraph:yWorks,
@@ -161,6 +161,18 @@
   url     = {https://mathworld.wolfram.com/AdjacencyMatrix.html},
   urldate = {2024-07-10}
 }
+
+@article{adjacencyOrNode:Okoe,
+  author  = {Okoe, Mershack and Jianu, Radu and Kobourov, Stephen},
+  journal = {IEEE Transactions on Visualization and Computer Graphics},
+  title   = {Node-Link or Adjacency Matrices: Old Question, New Insights},
+  year    = {2019},
+  volume  = {25},
+  number  = {10},
+  pages   = {2940-2952},
+  doi     = {10.1109/TVCG.2018.2865940}
+}
+
 
 %
 % Graphs and Knowledge Graphs
