--- a/tex/settings/document.tex
+++ b/tex/settings/document.tex
@@ -32,7 +32,7 @@
 \newcommand{\showLecture}{false}
 
 \newcommand{\releaseDate}{September 2024}
-\newcommand{\releaseLocation}{Abgabeort}
+\newcommand{\releaseLocation}{Heidenheim an der Brenz}
 
 \newcommand{\companyName}{EXTRA Computer GmbH}
 \newcommand{\companyLocation}{Giengen an der Brenz}
