--- a/tex/settings/document.tex
+++ b/tex/settings/document.tex
@@ -15,7 +15,7 @@
 \newcommand{\documentTitle}{Visualisierung von großen Datasets aus Graph-Datenbanken}
 \newcommand{\documentPeriod}{22 Wochen}
 
-\newcommand{\matriculationNumber}{***REMOVED***}
+\newcommand{\matriculationNumber}{Matrikelnummer}
 
 \newcommand{\locationUniversity}{Heidenheim}
 \newcommand{\department}{Informatik}
